# rholang-language-server

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  UNIFIED_IR_PROGRESS.md  bench_results_phase_a_baseline_comparison.md  build.rs  development.md
.config/: nextest.toml
.github/workflows/: build-and-test.yml  release.yml  test-ci.yml
benches/: cache_performance.rs  completion_performance.rs  detection_worker_benchmark.rs  indexing_performance.rs  ir_benchmarks.rs  lazy_subtrie_benchmark.rs  lsp_operations_benchmark.rs  mork_serialization_baseline.rs  real_world_benchmark.rs  space_object_pooling_baseline.rs
docs/: ALL_PHASES_INDEX.md  BACKEND_REFACTORING_PLAN.md  BACKEND_REFACTORING_PLAN_REVISED.md  BUILD_METADATA.md  COMMUNICATION_OPTIMIZATION_PLAN.md  COMMUNICATION_PHASES_2-4_ROADMAP.md  COMPLETE_REFACTORING_ROADMAP.md  DEBUGGING_STACK_OVERFLOW.md  EMBEDDED_LANGUAGES_GUIDE.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_PROFILING_GUIDE.md  PHASE1_IMPLEMENTATION_STATUS.md  PHASE2_IMPLEMENTATION_STATUS.md  PHASE2_OPTIMIZATION_PLAN.md  PHASE2_RESULTS.md  PHASE_2_COMPLETION_GUIDE.md  PHASE_3_TYPE_BASED_MATCHING.md  POSITION_DEBUGGING_STRATEGY.md  POSITION_TRACKING.md  REACTIVE_ARCHITECTURE.md  README.md  REFACTORING_PHASES_3_6_PLAN.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  SESSION_2025_10_29_UNIFIED_LSP_TREE_SITTER.md  STACK_OVERFLOW_TRACING.md  SYMBOL_INDEXING_AND_RESOLUTION.md  SYMBOL_REFACTORING_IMPLEMENTATION_PLAN.md  TREE_SITTER_REFACTORING_PLAN.md  UNIFIED_LSP_ARCHITECTURE.md  UNIFIED_LSP_PROGRESS.md  USER_GUIDE.md  VIRTUAL_LANGUAGE_ARCHITECTURE.md  VIRTUAL_LANGUAGE_EXTENSION_SYSTEM.md  VIRTUAL_LANGUAGE_UNIFIED_IR_INTEGRATION.md  VISITOR_REFACTORING_PLAN.md  code_completion_implementation.md  (+27 more)
docs/architecture/: MULTI_LANGUAGE_DESIGN.md  PATTERN_MATCHING_OK_SOLUTION.md  mork_pathmap_integration.md  position_tracking.md
docs/completion/: pattern_aware_completion_phase1.md  pattern_aware_implementation_summary.md  post_hierarchical_filtering_summary.md  prefix_zipper_integration.md  user_testing_guide.md
docs/development/: METTA_INTEGRATION_CHECKLIST.md  METTA_INTEGRATION_PLAN.md  METTA_INTEGRATION_PLAN_REVISED.md  METTA_INTEGRATION_SUMMARY.md  METTA_PHASE0_VERIFICATION.md  MIGRATION_PLAN.md  STEP_3_STATUS.md  UNIFIED_IR_PROGRESS.md
docs/optimization/: cache-capacity-tuning-guide.md  cross_pollination_rholang_mettatron.md  lsp-introspection-guide.md
docs/optimization/ledger/: README.md  phase-a-1-lazy-subtrie.md  phase-a-2-lru-pattern-cache.md  phase-a-3-space-object-pooling.md  phase-a-4-analytical-review.md  phase-a-summary.md  phase-b-1-architecture.md  phase-b-1-incremental-indexing.md  phase-b-1-progress-summary.md  phase-b-2-baseline-measurements.md  phase-b-2-final-summary.md  (+6 more)
docs/pattern_matching/: DOCUMENTATION_STATUS.md  INTEGRATION_ROADMAP.md  README.md  SESSION_COMPLETION_SUMMARY.md  STEP3_IMPLEMENTATION_PLAN.md  STEP3_PARTIAL_IMPLEMENTATION.md  TEST_FIXES_COMPLETION.md
docs/research/: METTATRON_INVESTIGATION.md  MORK_INTEGRATION_GUIDE.md  MORK_QUERY_OPTIMIZATION.md  MORK_STUDY_SUMMARY.md  QUERY_MULTI_INVESTIGATION.md
docs/sessions/: SESSION_2025_10_24_METTA_INVESTIGATION.md  SESSION_2025_10_24_SUMMARY.md
packaging/arch/: PKGBUILD
proto/: lsp.proto
queries/rholang/: folds.scm  highlights.scm  locals.scm  textobjects.scm
src/: backend.rs  document.rs  lib.rs  logging.rs  main.rs  metrics.rs  models.rs  parser.rs  serde_helpers.rs  tree_sitter.rs  wire_logger.rs  wire_logger_middleware.rs
src/ir/: comment.rs  document_ir.rs  formatter.rs  global_index.rs  metta_node.rs  metta_pattern_matching.rs  mod.rs  mork_canonical.rs  mork_convert.rs  node.rs  pattern_matching.rs  pattern_matching_debug.rs  pipeline.rs  rholang_node.rs  rholang_pattern_index.rs  semantic_node.rs  space_pool.rs  structured_documentation.rs  symbol_table.rs  type_extraction.rs  unified_ir.rs  visitor.rs
src/language_regions/: async_detection.rs  channel_flow_analyzer.rs  concatenation.rs  detector.rs  detector_registry.rs  directive_parser.rs  mod.rs  semantic_detector.rs  virtual_document.rs
src/lsp/: backend.rs  backend_backup.rs  diagnostic_provider.rs  document.rs  grpc_validator.rs  mod.rs  models.rs  position_index.rs  rholang_contracts.rs  rholang_global_symbols.rs  rust_validator.rs  semantic_features.rs  semantic_validator.rs  symbol_index.rs
src/parsers/: metta_parser.rs  mod.rs  parse_cache.rs  position_utils.rs
src/rnode_apis/: lsp.rs
src/validators/: metta_validator.rs  mod.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs  lsp_client.rs  lsp_document.rs  lsp_event.rs  lsp_message_stream.rs
test_utils/src/ir/: generator.rs
test_utils/src/lsp/: document.rs  events.rs  message_stream.rs  mod.rs  streams.rs
test_utils/src/lsp/client/: handlers.rs  macros.rs  mod.rs
tests/: comment_nesting_test.rs  comment_parsing_tests.rs  debug_metta_spans.rs  debug_position_tracking.rs  embedded_metta_hover_tests.rs  embedded_metta_validation_tests.rs  generic_visitor_tests.rs  ir_pipeline.rs  lsp_best_practices.rs  lsp_feature_test.rs  lsp_feature_tests.rs  lsp_features.rs  measure_ast_depth.rs  measure_stack_size.rs  metta_goto_definition_test.rs  metta_pattern_matching_test.rs  metta_position_tests.rs  metta_scoping_comparison_tests.rs  metta_scoping_debug_test.rs  metta_scoping_tests.rs  metta_virtual_doc_position_test.rs  operators_with_comments_test.rs  pattern_based_lookup_tests.rs  pattern_lookup_performance_tests.rs  performance_tests.rs  reactive_optimizations.rs  robot_planning_pattern_matching_test.rs  robot_planning_positions_test.rs  semantic_detection_tests.rs  semantic_validation.rs  simple_position_test.rs  simplify_double_unary.rs  test_completion.rs  test_complex_quote_patterns.rs  test_diagnostics_simple.rs  test_document_cache.rs  test_goto_def_simple.rs  test_goto_definition_destroom_scoping.rs  test_goto_definition_nested_scopes.rs  test_goto_definition_robot_api.rs  (+20 more)
tests/common/: lsp_client.rs  lsp_document.rs  lsp_event.rs  lsp_message_stream.rs  mod.rs
(+83 files in other folders)
