[package]
name = "rholang-language-server"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
archery = "1.2.1"  # Matches rpds 1.1.1's dependency
async-trait = "0.1"
chrono = "0.4"  # Used for runtime timestamps in LSP
clap = { version = "4.5", features = ["derive"] }
const_format = "0.2"  # Used for compile-time string formatting
dashmap = "6.1"
dirs = "5.0"
futures = "0.3"  # Includes futures-util functionality
parking_lot = "0.12"
lsp-types = "0.97"
once_cell = "1.20"  # Lazy static initialization (for parse cache)
rustc-hash = "2.0"  # FxHash for fast internal hash maps (Phase 2 optimization)
mork = { path = "../MORK/kernel", features = ["interning"] }
mork-expr = { path = "../MORK/expr" }
mork-frontend = { path = "../MORK/frontend" }
mettatron = { path = "../MeTTa-Compiler" }
tree-sitter-metta = { path = "../MeTTa-Compiler/tree-sitter-metta" }
notify = "5.0"
pathmap = { path = "../PathMap", features = ["jemalloc", "arena_compact"] }
petgraph = "0.8.2"
prost = "0.13"
rayon = "1.10"
# rholang-parser = { git = "https://github.com/dylon/rholang-rs.git", branch = "dylon/comments" }
# rholang-tree-sitter = { git = "https://github.com/dylon/rholang-rs.git", branch = "dylon/comments" }
rholang-parser = { path = "../rholang-rs/rholang-parser/", features = ["named-comments"] }
rholang-tree-sitter = { path = "../rholang-rs/rholang-tree-sitter/", features = ["named-comments"] }
ropey = "1.6"
rpds = "1.1"
scopeguard = "1.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
suffix = "1.2"  # Suffix array for O(m log n) substring search
thiserror = "1.0"
time = { version = "0.3", features = ["macros", "formatting"] }
tokio-tungstenite = { version = "0.23", optional = true }  # WebSocket support
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["time", "sync"] }
tonic = "0.13"
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"
tree-sitter = "0.25"
url = "2.5"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
validated = "1.0.0"

# Rholang interpreter (optional for semantic validation)
rholang = { path = "../f1r3node/rholang", optional = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }

[dev-dependencies]
indoc = "2"
quickcheck = "1.0"
test_utils = { path = "test_utils" }
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
tonic-build = "0.13"
chrono = "0.4"

[features]
default = ["websocket", "interpreter"]
websocket = ["tokio-tungstenite"]
interpreter = ["rholang"]

[[bin]]
name = "dummy_client"
path = "test_utils/src/bin/dummy_client.rs"

[[bench]]
name = "detection_worker_benchmark"
harness = false

[[bench]]
name = "lsp_operations_benchmark"
harness = false

[[bench]]
name = "real_world_benchmark"
harness = false
