[package]
name = "test_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
futures = "0.3"
quickcheck = "1.0"
ropey = "1.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["macros", "formatting"] }
tokio-tungstenite = { version = "0.23", optional = true }  # WebSocket support
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
url = "2.5"
uuid = { version = "1", features = ["v4"] }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }

[features]
default = ["websocket"]
websocket = ["tokio-tungstenite"]